gcp/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: nginx-api-ingress
  namespace: pvcy
spec:
  tls:
  - hosts:
    - api.pvcy.customer.com
    secretName: nginx-api-secret
  rules:
    - host: api.pvcy.customer.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-api-service
                port:
                  number: 80
