gcp/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: analyzer-app-service-ingress
  namespace: pvcy
spec:
  tls:
  - hosts:
    - app.pvcy.customer.com
    secretName: analyzer-app-secret
  rules:
    - host: app.pvcy.customer.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: app
                port:
                  number: 80
