gcp/kots-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: "nginx"
   cert-manager.io/cluster-issuer: "letsencrypt-production"
 name: kots-ingress
 namespace: pvcy
spec:
 tls:
 - hosts:
   - kotsadm.pvcy.customer.com
   secretName: kotsadm-app-secret
 rules:
 - host: kotsadm.pvcy.customer.com
   http:
     paths:
     - backend:
         serviceName: kotsadm
         servicePort: 3000
